# homework_7_bulk

./: .clang-format  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  _main_page_8md.html  annotated.html  bulk__reader_8h.html  bulk__reader_8h__dep__incl.map  bulk__reader_8h__dep__incl.md5  bulk__reader_8h__incl.map  bulk__reader_8h__incl.md5  bulk__reader_8h_source.html  classes.html  classroro__lib_1_1command__reader-members.html  classroro__lib_1_1command__reader.html  classroro__lib_1_1command__reader__inherit__graph.map  classroro__lib_1_1command__reader__inherit__graph.md5  classroro__lib_1_1exception__ptr__list-members.html  classroro__lib_1_1exception__ptr__list.html  classroro__lib_1_1publisher__mixin.html  classroro__lib_1_1publisher__mixin_3_01_r_07_args_8_8_8_08_4-members.html  classroro__lib_1_1publisher__mixin_3_01_r_07_args_8_8_8_08_4.html  dir_000001_000000.html  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d9e670a2d885dd196e319b6d49042dab.html  dir_d9e670a2d885dd196e319b6d49042dab_dep.map  dir_d9e670a2d885dd196e319b6d49042dab_dep.md5  exception__list_8h.html  exception__list_8h__dep__incl.map  exception__list_8h__dep__incl.md5  exception__list_8h__incl.map  exception__list_8h__incl.md5  exception__list_8h_source.html  files.html  functions.html  functions_enum.html  (+64 more)
MyDoc/: MainPage.md
include/: bulk.h  bulk_reader.h  exception_list.h  publisher.h  publisher_unique.h  subscribers.h
src/: CMakeLists.txt  main.cpp
src_test/: CMakeLists.txt  test_bulk.cpp
(+1 files in other folders)
